@@ -29,6 +29,7 @@
 
    <properties>
       <activemq.basedir>${project.basedir}/../..</activemq.basedir>
+      <its-surefire-extra-args/>
    </properties>
 
    <dependencies>
@@ -481,7 +482,9 @@
                      <goal>single</goal>
                   </goals>
                   <configuration>
-                     <descriptor>src/test/resources/rest/bwlist-rest-test-asm.xml</descriptor>
+                     <descriptors>
+                        <descriptor>src/test/resources/rest/bwlist-rest-test-asm.xml</descriptor>
+                     </descriptors>
                      <finalName>rest-test-bwlist</finalName>
                      <appendAssemblyId>false</appendAssemblyId>
                      <outputDirectory>target/test-classes/rest/</outputDirectory>
@@ -494,7 +497,9 @@
                      <goal>single</goal>
                   </goals>
                   <configuration>
-                     <descriptor>src/test/resources/rest/rest-test-asm.xml</descriptor>
+                     <descriptors>
+                        <descriptor>src/test/resources/rest/rest-test-asm.xml</descriptor>
+                     </descriptors>
                      <finalName>rest-test</finalName>
                      <appendAssemblyId>false</appendAssemblyId>
                      <outputDirectory>target/test-classes/rest/</outputDirectory>
@@ -523,7 +528,7 @@
                   <exclude>**/ReplicatedJMSFailoverTest.java</exclude>
                   <exclude>org.apache.activemq/tests/util/*.java</exclude>
                </excludes>
-               <argLine>-Djgroups.bind_addr=::1 ${activemq-surefire-argline} -Dorg.apache.activemq.SERIALIZABLE_PACKAGES="java.lang,javax.security,java.util,org.apache.activemq,org.fusesource.hawtbuf"</argLine>
+               <argLine>-Djgroups.bind_addr=::1 ${activemq-surefire-argline} ${its-surefire-extra-args} -Dorg.apache.activemq.SERIALIZABLE_PACKAGES="java.lang,javax.security,java.util,org.apache.activemq,org.fusesource.hawtbuf"</argLine>
             </configuration>
          </plugin>
          <plugin>
@@ -550,5 +555,16 @@
          </plugin>
       </plugins>
    </build>
+   <profiles>
+      <profile>
+         <id>jdk16on</id>
+            <activation>
+         <jdk>[16,)</jdk>
+         </activation>
+         <properties>
+            <its-surefire-extra-args>--add-exports java.security.jgss/sun.security.krb5=ALL-UNNAMED</its-surefire-extra-args>
+         </properties>
+      </profile>
+   </profiles>
 </project>
 
